# alpha_centauri

./: .gitignore  LICENSE  README.md  keyboard.json
.github/workflows/: release.yml  version-check.yml
docs/: building.md  design.md
keymaps/default/: Makefile  autocorrect_dictionary.txt  config.h  keymap.c  mount_rp2040.sh  rules.mk
keymaps/default/keymap/: jacob-w-gable.c  jacob-w-gable.json
keymaps/default/src/: driver.c  unicode.c
pcb/: alpha_centauri_pcb.kicad_prl  alpha_centauri_pcb.kicad_sch  keyboard_l.kicad_sch  keyboard_r.kicad_sch  mcu_l.kicad_sch  mcu_r.kicad_sch  testing.md
rgb_ctrl/: Cargo.toml
rgb_ctrl/src/: args.rs  command.rs  device.rs  main.rs  usb.rs
rgb_ctrl/src/command/: set_color.rs
stl/: README.md
stl/amoeba_king/: bottom-left.stl  bottom-right.stl  top-left.stl  top-right.stl
stl/amoeba_v1/: bottom-left.stl  bottom-right.stl  top-left.stl  top-right.stl
